bg transparency, contact borders

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <img class="image-params" src="img/shuttle.jpg" alt="Шатл на готове">
       </div>
 
-      <div class="column-2 background">
+      <div class="column-2 bg">
         <p>
           Расстояние от Венеры до Земли меняется в пределах от 38 до 261 млн км (и это только в одну сторону!).
 
@@ -69,40 +69,40 @@
 
     <div id="title-sale">
       <div id="countdown"></div>
-      <p class="note background"></p>
+      <p class="note bg"></p>
 
       <script src="js/jquery.countdown.js"></script>
       <script src="js/sale.js"></script>
     </div>
 
     <div id="about-us">
-      <div class="title-small background">Почему именно мы?</div>
+      <div class="title-small bg">Почему именно мы?</div>
       <div class="text">
-        <div class="params background">
+        <div class="params bg">
           Мы строго придерживаемся установленных планов и сроков исполнения.
         </div>
-        <div class="params background">
+        <div class="params bg">
           Мы гарантируем качество оказываемых услуг.
         </div>
-        <div class="params background">
+        <div class="params bg">
           К работе допускаются только люди прошедшие соответствующую подготовку.
         </div>
       </div>
       <div class="text">
-        <div class="params background">
+        <div class="params bg">
           Мы любим и уважаем своих клиентов. Гарантируя вашу безопасность.
         </div>
-        <div class="params background">
+        <div class="params bg">
           Мы работаем в сфере космического туризма с 2000 года.
         </div>
-        <div class="params background">
+        <div class="params bg">
           Полная оплата производится по вашему прибытию на Землю.
         </div>
       </div>
     </div>
 
     <div id="reviews">
-      <div class="title-small background">Отзывы клиентов</div>
+      <div class="title-small bg">Отзывы клиентов</div>
       <div class="slider">
 
           <div class="item gradient-right item_active">
@@ -162,7 +162,7 @@
       </div>
     </div>
 
-    <div class="title-small background">Заказать обратый звонок</div>
+    <div class="title-small bg">Заказать обратый звонок</div>
     <div class="back_call">
       <i class="phone is-animating"></i>
     </div>
@@ -172,8 +172,8 @@
       <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
             integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-      <div class="title-small background">Контакты</div>
-      <div class="social background">
+      <div class="title-small bg">Контакты</div>
+      <div class="social bg">
         <ul>
           <li class="fa-facebook fa"></li>
           <li class="fa-twitter fa"></li>
@@ -182,12 +182,12 @@
           <li class="fa-whatsapp fa"></li>
         </ul>
       </div>
-      <div class="cont background">
+      <div class="cont bg">
         <a class="title-cont" href="tel:+375-44-5888834">+375-44-5888834</a>
         <a class="title-cont" href="mailto:procustom4@gmail.com">procustom4@gmail.com</a>
       </div>
 
-      <div class="title-map cont background">Местоположение нашего офиса</div>
+      <div class="title-map cont bg">Местоположение нашего офиса</div>
       <div class="map">
         <script type="text/javascript" charset="utf-8" async
                 src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A76906cb20432a51958ec68c7c757700f8aaa7582f4cfa518c492251e37ee126c&amp;lang=ru_RU&amp;scroll=true"></script>
